add baners on home page

--- a/Theory/Metodology_dev.html
+++ b/Theory/Metodology_dev.html
@@ -21,6 +21,7 @@
             </div>
 
             <div>
+                <a href="../Pages/interesting_information.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
@@ -136,7 +137,7 @@
                 <b><i>Scrum - це методика роботи, а Agile - це спосіб мислення.</i></b>
             </p>
             <img src="../Image/scrum.jpg" alt="Scrum">
-            
+
         </div>
     </main>
 
