--- a/Theory/Theory_What_is_QA.html
+++ b/Theory/Theory_What_is_QA.html
@@ -22,6 +22,7 @@
             </div>
     
             <div>
+                <a href="../Pages/What_is_QA.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
