--- a/index.html
+++ b/index.html
@@ -36,67 +36,97 @@
     </header>
 
     <main class="">
-        <section id="What is QA testing?">
-            <h2>
-                <a href="./Pages/What_is_QA.html" class="page">What is QA testing?</a>
-            </h2>
-            <!--  Testing Types -->
-        </section>
 
-        <section id="TestingTypes">
-            <h2><a href=".//Pages/Testing_Types.html" class="page">Testing Types</a></h2>
+        <div class="baner-1">
+            <img src="./Image/baner1.jpg" alt="">
+            <div class="baner1-title">
+                <h2>Онлайн курс тестувальник ПЗ</h2>
+                <p>На курсі QA ви навчитеся знаходити помилки в роботі сайтів та додатків та забезпечувати якість
+                    продукту та його процесів</p>
+            </div>
+            <div class="baner1-button">
+                <a href="https://cloud.itstep.org/ru/software-testing-qa" target="_blank">Записатись на курс</a>
+            </div>
+        </div>
 
-        </section>
+        <div class="theory-sections">
+            <section id="What is QA testing?">
+                <h2>
+                    <a href="./Pages/What_is_QA.html" class="page">What is QA testing?</a>
+                </h2>
+                <!--  Testing Types -->
+            </section>
 
-        <section id="TestCases">
-            <h2><a href="./Pages/Test_Case.html" class="page">Test Cases</a></h2>
-        </section>
+            <section id="TestingTypes">
+                <h2><a href=".//Pages/Testing_Types.html" class="page">Testing Types</a></h2>
 
-        <section id="TestDesign">
-            <h2>
-                <a href="./Pages/Test_Design.html" class="page">Test Design Techniques</a>
+            </section>
 
-            </h2>
-        </section>
+            <section id="TestCases">
+                <h2><a href="./Pages/Test_Case.html" class="page">Test Cases</a></h2>
+            </section>
 
-        <section id="ChecklistAndDecomposition">
-            <h2>
-                <a href="./Pages/Check_List.html" class="page">Checklist and Decomposition</a></h2>
-            <!--  Checklist and Decomposition -->
-        </section>
+            <section id="TestDesign">
+                <h2>
+                    <a href="./Pages/Test_Design.html" class="page">Test Design Techniques</a>
 
-        <section id="BugReports">
-            <h2>
-                <a href="./Pages/Bug_Report.html" class="page">Bug Reports</a></h2>
-            <!-- Bug Reports  -->
-        </section>
+                </h2>
+            </section>
 
-        <section id="SDLC">
-            <h2>
-                <a href="./Pages/SDLC.html" class="page">Software Development Life Cycle</a></h2>
-            <!--  Software Development Life Cycle -->
-        </section>
+            <section id="ChecklistAndDecomposition">
+                <h2>
+                    <a href="./Pages/Check_List.html" class="page">Checklist and Decomposition</a>
+                </h2>
+                <!--  Checklist and Decomposition -->
+            </section>
 
-        <section id="STLC">
-            <h2>
-                <a href="./Pages/STLC.html" class="page">Software Testing Life Cycle</a></h2>
-            <!--  Software Testing Life Cycle -->
-        </section>
+            <section id="BugReports">
+                <h2>
+                    <a href="./Pages/Bug_Report.html" class="page">Bug Reports</a>
+                </h2>
+                <!-- Bug Reports  -->
+            </section>
 
-        <section id="TestPlan">
-            <h2>Test Plan</h2>
-            <!-- Content for Test Plan -->
-        </section>
+            <section id="SDLC">
+                <h2>
+                    <a href="./Pages/SDLC.html" class="page">Software Development Life Cycle</a>
+                </h2>
+                <!--  Software Development Life Cycle -->
+            </section>
 
-        <section id="Requirements">
-            <h2>Requirements</h2>
-            <!-- Content for Requirements -->
-        </section>
+            <section id="STLC">
+                <h2>
+                    <a href="./Pages/STLC.html" class="page">Software Testing Life Cycle</a>
+                </h2>
+                <!--  Software Testing Life Cycle -->
+            </section>
 
-        <section id="TestRailAndJira">
-            <h2>TestRail & Jira</h2>
-            <!-- Content for TestRail & Jira -->
-        </section>
+            <section id="TestPlan">
+                <h2>Test Plan</h2>
+                <!-- Content for Test Plan -->
+            </section>
+
+            <section id="Requirements">
+                <h2>Requirements</h2>
+                <!-- Content for Requirements -->
+            </section>
+
+            <section id="TestRailAndJira">
+                <h2>TestRail & Jira</h2>
+                <!-- Content for TestRail & Jira -->
+            </section>
+        </div>
+
+        <div class="baner-2">
+            <img src="./Image/baner-2.jpg" alt="">
+            <div class="baner2-title">
+                <h2>Індивідуальне навчання</h2>
+                <p>Для тих, хто хоче отримати нові або покращити існуючі навички віч-на-віч з викладачем</p>
+            </div>
+            <div class="baner2-button">
+                <a href="https://cloud.itstep.org/individual-courses" target="_blank">Записатись на курс</a>
+            </div>
+        </div>
     </main>
 
     <footer>
