--- a/Theory/Theory_Bug_Report.html
+++ b/Theory/Theory_Bug_Report.html
@@ -22,6 +22,7 @@
             </div>
 
             <div>
+                <a href="../Pages/Bug_Report.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
