--- a/Theory/Theory_Test_Case.html
+++ b/Theory/Theory_Test_Case.html
@@ -22,6 +22,7 @@
             </div>
 
             <div>
+                <a href="../Pages/Test_Case.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
