--- a/Theory/Theory_Testing_Types.html
+++ b/Theory/Theory_Testing_Types.html
@@ -22,6 +22,7 @@
             </div>
     
             <div>
+                <a href="../Pages/Testing_Types.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
