--- a/Theory/Video_STLC.html
+++ b/Theory/Video_STLC.html
@@ -22,6 +22,7 @@
             </div>
 
             <div>
+                <a href="../Pages/STLC.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
