--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </li>
                     <li><a href="./Pages/registration.html" class="interview">Реєстрація</a>
                     </li>
-                    <li><a href="./Pages/contacts.html" class="contacts">Контакти</a>
+                    <li><a href="./Pages/Contacts.html" class="contacts">Контакти</a>
                     </li>
                 </ul>
             </nav>
