--- a/Pages/Contacts.html
+++ b/Pages/Contacts.html
@@ -29,12 +29,12 @@
     <div class="container">
         <h1>Зв'яжіться з нами</h1>
         <p>Будь ласка, залиште ваше повідомлення, і ми з вами зв'яжемося найближчим часом.</p>
-        <form action="https://api.web3forms.com/submit" method="POST">
+        <form action="https://api.web3forms.com/submit" method="POST" onsubmit="clearForm()">
             <input type="hidden" name="access_key" value="15d8256b-4d77-4576-9a78-c3eb1abc812d">
 
-            <input type="text" name="name" placeholder="Ваше ім'я" required>
-            <input type="email" name="email" placeholder="Ваша електронна пошта" required>
-            <textarea name="message" placeholder="Ваше повідомлення" required></textarea>
+            <input id="inputName" type="text" name="name" placeholder="Ваше ім'я" required>
+            <input id="inputId" type="email" name="email" placeholder="Ваша електронна пошта" required>
+            <textarea id="inputMessage" name="message" placeholder="Ваше повідомлення" required></textarea>
             <input type="submit" name="send" value="Відправити"> <a href="Home.html"></a>
         </form>
     </div>
@@ -42,6 +42,8 @@
     <footer>
         <p>&copy; 2024 QA IT-Step</p>
     </footer>
+
+    <script src="../js/contactPage.js"></script>
 </body>
 
 </html>
