add contact info in footer, fix main in index.html

--- a/Theory/UX design.html
+++ b/Theory/UX design.html
@@ -28,45 +28,53 @@
         </div>
     </header>
     <main>
-    <h1>Стандартна термінологія інтерфейсу користувача: Умови дій</h1>
-    <img src="../Image/owen.jpg" alt="">
+        <h1>Стандартна термінологія інтерфейсу користувача: Умови дій</h1>
+        <img src="../Image/owen.jpg" alt="">
 
 
-    <h2>Стандартна термінологія інтерфейсу користувача: терміни ідентифікатора</h2>
+        <h2>Стандартна термінологія інтерфейсу користувача: терміни ідентифікатора</h2>
 
-    <img src="../Image/two.jpg" alt="">
+        <img src="../Image/two.jpg" alt="">
 
-    <h2>Загальні елементи введення</h2>
+        <h2>Загальні елементи введення</h2>
 
-    <img src="../Image/thre.jpg" alt="">
-    <img src="../Image/for.jpg" alt="">
-    <img src="../Image/five.jpg" alt="">
-    <img src="../Image/six.jpg" alt="">
+        <img src="../Image/thre.jpg" alt="">
+        <img src="../Image/for.jpg" alt="">
+        <img src="../Image/five.jpg" alt="">
+        <img src="../Image/six.jpg" alt="">
 
-    <h2>Все про поля</h2>
-    <img src="../Image/seven.jpg" alt="">
-    <img src="../Image/nihht.jpg" alt="">
-    <img src="../Image/devit.jpg" alt="">
+        <h2>Все про поля</h2>
+        <img src="../Image/seven.jpg" alt="">
+        <img src="../Image/nihht.jpg" alt="">
+        <img src="../Image/devit.jpg" alt="">
 
-    <h2>Загальні вихідні елементи</h2>
+        <h2>Загальні вихідні елементи</h2>
 
-    <img src="../Image/ten.jpg" alt="">
+        <img src="../Image/ten.jpg" alt="">
 
-    <h2>Інші загальні елементи</h2>
-    <img src="../Image/odini.jpg" alt="">
-    <img src="../Image/kebab.jpg" alt="">
-    <img src="../Image/panel.jpg" alt="">
-    <img src="../Image/pidkazka.jpg" alt="">
-    <img src="../Image/povzun.jpg" alt="">
-    <img src="../Image/spoviweniy.jpg" alt="">
-    <img src="../Image/tegi.jpg" alt="">
-    <img src="../Image/forma.jpg" alt="">
-    <img src="../Image/kartka.jpg" alt="">
+        <h2>Інші загальні елементи</h2>
+        <img src="../Image/odini.jpg" alt="">
+        <img src="../Image/kebab.jpg" alt="">
+        <img src="../Image/panel.jpg" alt="">
+        <img src="../Image/pidkazka.jpg" alt="">
+        <img src="../Image/povzun.jpg" alt="">
+        <img src="../Image/spoviweniy.jpg" alt="">
+        <img src="../Image/tegi.jpg" alt="">
+        <img src="../Image/forma.jpg" alt="">
+        <img src="../Image/kartka.jpg" alt="">
+
+    </main>
+    <footer>
+        <div>
+            <a href="https://cloud.itstep.org/">IT курси онлайн</a>
+            <a href="https://cloud.itstep.org/">&copy; 2024 QA IT-Step</a>
+        </div>
     
-</main>
-<footer>
-    <p>&copy; 2024 QA IT-Step</p>
-</footer>
+        <div>
+            <a href="mailto:cloud.office@itstep.org">cloud.office@itstep.org</a>
+            <a href="tel:+38 (073) 797-88-22">+38 (073) 797-88-22</a>
+        </div>
+    </footer>
 </body>
 
 </html>
