--- a/Theory/Video_Test_Case.html
+++ b/Theory/Video_Test_Case.html
@@ -22,12 +22,12 @@
             </div>
 
             <div>
-                <a href="../Pages/Test_Case.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
     </header>
     <h1>Video Test Case</h1>
+
     <main>
         <div class="video-container">
             <h2>What is a Test Case and Why is it Important?</h2>
@@ -68,8 +68,17 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </main>
+
     <footer>
-        <p>&copy; 2024 QA IT-Step</p>
+        <div>
+            <a href="https://cloud.itstep.org/">IT курси онлайн</a>
+            <a href="https://cloud.itstep.org/">&copy; 2024 QA IT-Step</a>
+        </div>
+
+        <div>
+            <a href="mailto:cloud.office@itstep.org">cloud.office@itstep.org</a>
+            <a href="tel:+38 (073) 797-88-22">+38 (073) 797-88-22</a>
+        </div>
     </footer>
 
 </body>
