--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/accordion.css">
     <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
     <title>QA Learning Hub</title>
 </head>
@@ -49,73 +50,112 @@
             </div>
         </div>
 
-        <div class="theory-sections">
-            <section id="What is QA testing?">
-                <h2>
-                    <a href="./Pages/What_is_QA.html" class="page">What is QA testing?</a>
-                </h2>
-                <!--  Testing Types -->
-            </section>
+        <!-- ------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------ -->
+        <div class="accordion-themes">
+            <button class="accordion">What is QA testing?</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_What_is_QA.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_What_is_QA.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="TestingTypes">
-                <h2><a href=".//Pages/Testing_Types.html" class="page">Testing Types</a></h2>
+            <button class="accordion">Testing Types</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_Testing_Types.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video2_Testing_Type.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            </section>
+            <button class="accordion">Test Cases</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_Test_Case.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_Test_Case.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="TestCases">
-                <h2><a href="./Pages/Test_Case.html" class="page">Test Cases</a></h2>
-            </section>
+            <button class="accordion">Test Design Techniques</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_Test_Design.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_Test_Design.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="TestDesign">
-                <h2>
-                    <a href="./Pages/Test_Design.html" class="page">Test Design Techniques</a>
+            <button class="accordion">Checklist and Decomposition</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_Check_List.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_Check_List.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-                </h2>
-            </section>
+            <button class="accordion">Bug Reports</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_Bug_Report.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_Bug_Report.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="ChecklistAndDecomposition">
-                <h2>
-                    <a href="./Pages/Check_List.html" class="page">Checklist and Decomposition</a>
-                </h2>
-                <!--  Checklist and Decomposition -->
-            </section>
+            <button class="accordion">Software Development Life Cycle</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_SDLC.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_SDLC.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="BugReports">
-                <h2>
-                    <a href="./Pages/Bug_Report.html" class="page">Bug Reports</a>
-                </h2>
-                <!-- Bug Reports  -->
-            </section>
+            <button class="accordion">Software Testing Life Cycle</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/Theory_STLC.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_STLC.html" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="SDLC">
-                <h2>
-                    <a href="./Pages/SDLC.html" class="page">Software Development Life Cycle</a>
-                </h2>
-                <!--  Software Development Life Cycle -->
-            </section>
+            <button class="accordion">Test Plan</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/" target="_blank">Theory</a>
+                    <a href="./Theory/" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="STLC">
-                <h2>
-                    <a href="./Pages/STLC.html" class="page">Software Testing Life Cycle</a>
-                </h2>
-                <!--  Software Testing Life Cycle -->
-            </section>
+            <button class="accordion">Requirements</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/" target="_blank">Theory</a>
+                    <a href="./Theory/" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="TestPlan">
-                <h2>Test Plan</h2>
-                <!-- Content for Test Plan -->
-            </section>
+            <button class="accordion">TestRail & Jira</button>
+            <div class="panel">
+                <p>
+                    <a href="./Theory/" target="_blank">Theory</a>
+                    <a href="./Theory/" target="_blank">Video</a>
+                </p>
+            </div>
+            <hr class="accordion-border">
 
-            <section id="Requirements">
-                <h2>Requirements</h2>
-                <!-- Content for Requirements -->
-            </section>
-
-            <section id="TestRailAndJira">
-                <h2>TestRail & Jira</h2>
-                <!-- Content for TestRail & Jira -->
-            </section>
         </div>
+
+        <!-- ------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------ -->
 
         <div class="baner-2">
             <img src="./Image/baner-2.jpg" alt="">
@@ -130,9 +170,19 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 QA IT-Step</p>
+        <div>
+            <a href="https://cloud.itstep.org/">IT курси онлайн</a>
+            <a href="https://cloud.itstep.org/">&copy; 2024 QA IT-Step</a>
+        </div>
+
+        <div>
+            <a href="mailto:cloud.office@itstep.org">cloud.office@itstep.org</a>
+            <a href="tel:+38 (073) 797-88-22">+38 (073) 797-88-22</a>
+        </div>
     </footer>
 
+
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
