--- a/Theory/Video_Check_List.html
+++ b/Theory/Video_Check_List.html
@@ -22,7 +22,6 @@
             </div>
 
             <div>
-                <a href="../Pages/Check_List.html">Попередня сторінка</a>
                 <a href="../index.html">Home page</a>
             </div>
         </div>
@@ -57,7 +56,15 @@
 
     </main>
     <footer>
-        <p>&copy; 2024 QA IT-Step</p>
+        <div>
+            <a href="https://cloud.itstep.org/">IT курси онлайн</a>
+            <a href="https://cloud.itstep.org/">&copy; 2024 QA IT-Step</a>
+        </div>
+    
+        <div>
+            <a href="mailto:cloud.office@itstep.org">cloud.office@itstep.org</a>
+            <a href="tel:+38 (073) 797-88-22">+38 (073) 797-88-22</a>
+        </div>
     </footer>
 
 </body>
