add new test in tech-check

--- a/Pages/tech_check.html
+++ b/Pages/tech_check.html
@@ -33,18 +33,28 @@
         <div class="test-block">
             <h2>Пройди тест на знання теорії QA</h2>
             <img src="../Image/quiz.jpg" alt="quiz" width="400px">
-            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+            <a href="https://naurok.com.ua/test/start/2803742" target="_blank">Пройти тест</a>
+        </div>
+        <div class="test-block">
+            <h2>Пройди тест з основ тестування</h2>
+            <img src="../Image/quiz2.jpg" alt="quiz" width="400px">
+            <a href="https://sourceit.com.ua/ua/tests/qa/" target="_blank">Пройти тест</a>
         </div>
         <div class="test-block">
             <h2>Пройди тест на знання теорії QA</h2>
-            <img src="../Image/quiz.jpg" alt="quiz" width="400px">
-            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+            <img src="../Image/quiz3.jpg" alt="quiz" width="400px">
+            <a href="https://powercode.academy/uk/qsm_quiz/testy-qa-chastyna-1/" target="_blank">Пройти тест</a>
         </div>
         <div class="test-block">
             <h2>Пройди тест на знання теорії QA</h2>
-            <img src="../Image/quiz.jpg" alt="quiz" width="400px">
-            <a href="https://naurok.com.ua/test/start/2803742">Пройти тест</a>
+            <img src="../Image/quiz4.jpg" alt="quiz" width="400px">
+            <a href="https://qalearning.com.ua/practice/automation_practice/theory_tests/supa-test/" target="_blank">Пройти тест</a>
         </div>
+        <div class="test-block">
+            <h2>Пройди тест на знання теорії QA</h2>
+            <img src="../Image/quiz5.jpg" alt="quiz" width="400px">
+            <a href="https://www.adaface.com/ru/assessment-test/qa-engineer-test" target="_blank">Пройти тест</a>
+        </div>  
     </main>
 
     <footer>
