add link presentat

--- a/Pages/interesting_information.html
+++ b/Pages/interesting_information.html
@@ -34,8 +34,13 @@
                     користувача</a>
             </h2>
         </div>
+
         <div class="block">
             <h2><a href="../Theory/Metodology_dev.html">Методології розробки ПЗ</a></h2>
+        </div>
+
+        <div class="block">
+            <h2><a href="../Theory/Theory_Present.html">Презентації лекцій</a></h2>
         </div>
     </div>
 
