--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
             <button class="accordion">Test Plan</button>
             <div class="panel">
                 <p>
-                    <a href="./Theory/" target="_blank">Theory</a>
-                    <a href="./Theory/" target="_blank">Video</a>
+                    <a href="./Theory/Theory_TestPlan.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_TestPlan.html" target="_blank">Video</a>
                 </p>
             </div>
             <hr class="accordion-border">
@@ -137,8 +137,8 @@
             <button class="accordion">Requirements</button>
             <div class="panel">
                 <p>
-                    <a href="./Theory/" target="_blank">Theory</a>
-                    <a href="./Theory/" target="_blank">Video</a>
+                    <a href="./Theory/Theory_Requir.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_Requir.html" target="_blank">Video</a>
                 </p>
             </div>
             <hr class="accordion-border">
@@ -146,8 +146,8 @@
             <button class="accordion">TestRail & Jira</button>
             <div class="panel">
                 <p>
-                    <a href="./Theory/" target="_blank">Theory</a>
-                    <a href="./Theory/" target="_blank">Video</a>
+                    <a href="./Theory/Theory_TestRail.html" target="_blank">Theory</a>
+                    <a href="./Theory/Video_TestRail.html" target="_blank">Video</a>
                 </p>
             </div>
             <hr class="accordion-border">
