--- a/Theory/Theory_Present.html
+++ b/Theory/Theory_Present.html
@@ -30,50 +30,60 @@
         <h1>Презентації до лекцій</h1>
         <ul>
             <li>
-                <a href="https://drive.google.com/file/d/1mcDQLwrl7bBqtc496sU6I-Lf74HkPyyk/view?usp=drive_link" target="_blank">Вступ до
+                <a href="https://drive.google.com/file/d/1mcDQLwrl7bBqtc496sU6I-Lf74HkPyyk/view?usp=drive_link"
+                    target="_blank">Вступ до
                     QA</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/10jPHqf_Z-gp0itP99zI0rTPXfdrGr32I/view?usp=drive_link" target="_blank">Методолії
+                <a href="https://drive.google.com/file/d/10jPHqf_Z-gp0itP99zI0rTPXfdrGr32I/view?usp=drive_link"
+                    target="_blank">Методолії
                     розробки ПЗ</a>
             </li>
             <li>
-                <a
-                    href="https://drive.google.com/file/d/1at4G447ocI0Q28OH8bfQAAh2ZWs5jQ-P/view?usp=drive_link" target="_blank">Тестування</a>
+                <a href="https://drive.google.com/file/d/1at4G447ocI0Q28OH8bfQAAh2ZWs5jQ-P/view?usp=drive_link"
+                    target="_blank">Тестування</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1-4gBIHYi-WpvwW6EHmxXsGKeRLLd4dre/view?usp=drive_link" target="_blank">Стратегія
+                <a href="https://drive.google.com/file/d/1-4gBIHYi-WpvwW6EHmxXsGKeRLLd4dre/view?usp=drive_link"
+                    target="_blank">Стратегія
                     тестування</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1aHaI6ehT0bQVZfXC6K4Pmc13toV9fCla/view?usp=drive_link" target="_blank">Типи
+                <a href="https://drive.google.com/file/d/1aHaI6ehT0bQVZfXC6K4Pmc13toV9fCla/view?usp=drive_link"
+                    target="_blank">Типи
                     тестування</a>
             </li>
             <li>
-                <a
-                    href="https://drive.google.com/file/d/1eMNScb4bNcMgLS1lnEWvTUb2JzcOc0ph/view?usp=drive_link" target="_blank">Дефекти</a>
+                <a href="https://drive.google.com/file/d/1eMNScb4bNcMgLS1lnEWvTUb2JzcOc0ph/view?usp=drive_link"
+                    target="_blank">Дефекти</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1dICmGhlZil26EEUl3d5RStBHZwCI7KGV/view" target="_blank">Тести</a>
+                <a href="https://drive.google.com/file/d/1dICmGhlZil26EEUl3d5RStBHZwCI7KGV/view"
+                    target="_blank">Тести</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1KhNwbqBw6Ca-LARSSwtBWUaXFkHdBa3F/view?usp=sharing" target="_blank">Тестування
+                <a href="https://drive.google.com/file/d/1KhNwbqBw6Ca-LARSSwtBWUaXFkHdBa3F/view?usp=sharing"
+                    target="_blank">Тестування
                     складних інформаційних систем</a>
             </li>
             <li>
-                <a href="" target="_blank"></a>
+                <a href="https://drive.google.com/file/d/1q2gSObqQ-Hvy6FOUwe8MC_PHin82vZVl/view?usp=sharing"
+                    target="_blank">Тестування веб застосунків</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1A4Hc96SZ9DnoTFXXbe8486AjMjRPZbOa/view?usp=sharing" target="_blank">ПЗ.
+                <a href="https://drive.google.com/file/d/1A4Hc96SZ9DnoTFXXbe8486AjMjRPZbOa/view?usp=sharing"
+                    target="_blank">ПЗ.
                     Тестування.
                     Введення</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/11wGiTaFljD1CBH-jYuy7B7BiCfVEoGN4/view?usp=drive_link" target="_blank">Особливості
+                <a href="https://drive.google.com/file/d/11wGiTaFljD1CBH-jYuy7B7BiCfVEoGN4/view?usp=drive_link"
+                    target="_blank">Особливості
                     тестування ігор</a>
             </li>
             <li>
-                <a href="https://drive.google.com/file/d/1Hug8RwvQ1WYF_oZz4cbDOKXuUH3znDm8/view?usp=drive_link" target="_blank">Від
+                <a href="https://drive.google.com/file/d/1Hug8RwvQ1WYF_oZz4cbDOKXuUH3znDm8/view?usp=drive_link"
+                    target="_blank">Від
                     тестування до QA</a>
             </li>
         </ul>
